# blockcraft

./: .gitignore  README.md  pyproject.toml
openspec/: project.md
openspec/changes/archive/2025-10-20-add-ursina-blockcraft/: proposal.md  tasks.md
openspec/changes/archive/2025-10-20-add-ursina-blockcraft/specs/game/: spec.md
openspec/changes/archive/2025-10-20-add-ursina-blockcraft/specs/physics/: spec.md
openspec/changes/archive/2025-10-20-add-ursina-blockcraft/specs/ui/: spec.md
openspec/changes/archive/2025-10-20-add-ursina-blockcraft/specs/world/: spec.md
openspec/changes/archive/2025-10-20-add-uv-run-blockcraft/: proposal.md  tasks.md
openspec/changes/archive/2025-10-20-add-uv-run-blockcraft/specs/game/: spec.md
openspec/changes/archive/2025-10-20-update-player-controls/: proposal.md  tasks.md
openspec/changes/archive/2025-10-20-update-player-controls/specs/game/: spec.md
openspec/changes/archive/2025-10-20-update-player-controls/specs/physics/: spec.md
openspec/changes/archive/2025-10-20-update-player-controls/specs/ui/: spec.md
openspec/specs/game/: spec.md
openspec/specs/physics/: spec.md
openspec/specs/ui/: spec.md
openspec/specs/world/: spec.md
src/blockcraft/: __init__.py  main.py
src/blockcraft/game/: __init__.py  game_manager.py
src/blockcraft/physics/: __init__.py  simple_physics.py
src/blockcraft/ui/: __init__.py  app.py  render.py
src/blockcraft/world/: __init__.py  blocks.py  world.py
tests/: conftest.py  test_game.py  test_main.py  test_physics.py  test_world.py
